[package]
name = "day_5"
version = "0.1.0"
authors = ["Dan Miller <dnmllr000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.9"
anyhow = "1.0.25"
advent_common = { path = "../advent_common" }
