[package]
name = "day_7"
version = "0.1.0"
authors = ["Dan Miller <dnmllr000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
advent_common = { path = "../advent_common" }
anyhow = "1.0.25"